Fix bug where spacer in control-bar was too large, causing the control-bar to wrap into two lines on iOS 8.2

--- a/src/scss/skin-modern/components/_controlbar.scss
+++ b/src/scss/skin-modern/components/_controlbar.scss
@@ -43,6 +43,10 @@
   }
 }
 
+.#{$prefix}-controlbar-bottom {
+  white-space: nowrap;
+}
+
 // IE9 compatibility: fallback for missing flexbox support
 // sass-lint:disable nesting-depth
 &.#{$prefix}-no-flexbox {
